--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-include": "^1.5.2",
     "vite-plugin-html-inject": "^1.1.2"
